[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/PlayerObjects/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/PlayerObjects/player.png" type="Texture" id=2]
[ext_resource path="res://scripts/PlayerObjects/LaserLine.gd" type="Script" id=3]
[ext_resource path="res://scripts/PlayerObjects/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://sprites/PlayerObjects/shield.png" type="Texture" id=5]
[ext_resource path="res://sprites/PlayerObjects/shoot.png" type="Texture" id=6]
[ext_resource path="res://sounds/shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/Particles/Light64.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3.6 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;
 
uniform float width : hint_range(0.0, 16.0);
uniform vec4 outline_color : hint_color;
 
void fragment()
{
    vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0));
   
    vec4 sprite_color = texture(TEXTURE, UV);
   
    float alpha = sprite_color.a;
    alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
   
    vec3 final_color = mix(outline_color.rgb, sprite_color.rgb, sprite_color.a);
    COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/width = 0.2
shader_param/outline_color = null

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("player:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0.8 ), Vector2( 0, -0.8 ), Vector2( 0, -0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ), Vector2( 1, 1.2 ), Vector2( 1, 1.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.4 ), Vector2( 0, 0.8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "return_drop"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("player:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1.2 ), Vector2( 0, -0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.3 ), Vector2( 1, 1.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.4 ), Vector2( 0, 0.4 ), Vector2( 0, -0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ), Vector2( 1, 0.9 ), Vector2( 1, 1.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 100.0
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0.2 ), Vector2( 0, -0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CanvasItemMaterial" id=11]
light_mode = 1

[sub_resource type="Animation" id=12]
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../shield:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 2.5, 3.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1.6, 2.1 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
collision_layer = 16
collision_mask = 1037
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.4 )
shape = SubResource( 1 )

[node name="player" type="Sprite" parent="."]
material = SubResource( 3 )
z_index = 1
texture = ExtResource( 2 )
hframes = 4

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.45, 0.45 )
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.15
drag_margin_top = 0.3
drag_margin_right = 0.15
drag_margin_bottom = 0.4
script = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 0, -90 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 0, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 4 )
anims/downFast = SubResource( 5 )
anims/downFloor = SubResource( 6 )
anims/downGravi = SubResource( 7 )
anims/downMiddle = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/run = SubResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0, 5.96046e-08 )
scale = Vector2( 0.4, 0.4 )

[node name="Timers" type="Node2D" parent="."]

[node name="idleSwitch" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Dropped" type="Timer" parent="Timers"]
wait_time = 0.02
one_shot = true

[node name="SlowMo" type="Timer" parent="Timers"]
wait_time = 0.075
one_shot = true

[node name="Star" type="Timer" parent="Timers"]
wait_time = 0.4
autostart = true

[node name="Snow" type="Timer" parent="Timers"]
wait_time = 0.4

[node name="Die" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="Ghost" type="Timer" parent="Timers"]
wait_time = 0.1
autostart = true

[node name="Waiter" type="Timer" parent="Timers"]
wait_time = 0.01
one_shot = true
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
material = SubResource( 11 )
z_index = 5
cast_to = Vector2( 0, 100 )
collision_mask = 11
script = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="RayCast2D"]
visible = false
use_parent_material = true
position = Vector2( 0, 8 )
z_as_relative = false
points = PoolVector2Array( 0, 0, 0, 92 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="Node2D" type="Node2D" parent="RayCast2D/Line2D"]
position = Vector2( 0, 16 )

[node name="shield" type="Sprite" parent="RayCast2D"]
modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
texture = ExtResource( 5 )

[node name="shoot" type="Sprite" parent="RayCast2D"]
modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
position = Vector2( 0, 16 )
rotation = 1.5708
z_index = 1
texture = ExtResource( 6 )
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="RayCast2D/shoot"]
autoplay = "idle"
anims/auto = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/visible = SubResource( 14 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483661

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 15 )

[node name="Rays" type="Node2D" parent="."]

[node name="IceCast" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( -2, 4 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 8

[node name="IceCast2" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( 2, 4 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 8

[node name="LavaCast" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( -2, 4 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 256

[node name="LavaCast2" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( 2, 4 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 256

[node name="ConvCast" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( -2, 4 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 64

[node name="ConvCast2" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( 2, 4 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 64

[node name="SpikeArea2D" type="Area2D" parent="Rays"]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rays/SpikeArea2D"]
shape = SubResource( 16 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 8 )
energy = 1.1
mode = 2
shadow_gradient_length = 1.3

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timers/idleSwitch" to="." method="_on_idleSwitch_timeout"]
[connection signal="timeout" from="Timers/Dropped" to="." method="_on_Dropped_timeout"]
[connection signal="timeout" from="Timers/SlowMo" to="." method="_on_SlowMo_timeout"]
[connection signal="timeout" from="Timers/Star" to="." method="_on_Star2Sec_timeout"]
[connection signal="timeout" from="Timers/Snow" to="." method="_on_Snow_timeout"]
[connection signal="timeout" from="Timers/Die" to="." method="_on_Die_timeout"]
[connection signal="timeout" from="Timers/Ghost" to="." method="_on_Ghost_timeout"]
[connection signal="timeout" from="Timers/Waiter" to="." method="_on_Waiter_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Rays/SpikeArea2D" to="." method="_on_SpikeArea2D_body_entered"]
